[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/VPPixel-Simplified.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Button.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 85.7734, 51.3599 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[node name="Button" type="Area2D"]
position = Vector2( 86.0085, 52.4557 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ButtonLabel" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -89.7938
margin_top = -85.1547
margin_right = 88.2062
margin_bottom = 59.8453
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
